stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_tests__division_by_zero_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "339ad85d35f97babcb252fa252f21fa93f069e6416550e21ece5120e0c0caaf2",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: division-by-zero-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(DivisionByZero) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 44,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9244,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 44,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9244,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "e503e94b5de1df24d78df356eaf68ea720a4c4fabe8d8a9723b50d0abda4d086",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: division-by-zero-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(DivisionByZero) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 44,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9244,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 44,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9244,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f799b035f598fedd50eb13e73217235a5af1cdfbbb6dd08ccf672355b6da193b",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: division-by-zero-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(DivisionByZero) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 44,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9244,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 44,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9244,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "128e602fec7be2c81f11e08eb30c7349aec83070723823b44b685c45bb33c211",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: division-by-zero-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(DivisionByZero) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 44,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9244,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 44,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9244,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "87bf65ccd6eaafe341a94d90c0faeff4d1ec9af74bf978b279a4eafe9b567728",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: division-by-zero-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(DivisionByZero) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 44,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9244,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 44,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9244,
    ),
  )),
]
