stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_tests__division_by_zero_mod_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "a1d3720c84939b3421db3272ceb4dae36142535bf20bf0cfd3338e00906a1965",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: division-by-zero-mod-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(DivisionByZero) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 46,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9310,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 46,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9310,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "4dc6b46fb3a764d01e69a04ba7c1f6ab4a03f315fc11ef5053416c4832eb462a",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: division-by-zero-mod-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(DivisionByZero) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 46,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9310,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 46,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9310,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "654dbcea7e66e0f6cc4e536174a7c3bb6f25ca281f6a200b13be020f1028c2a2",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: division-by-zero-mod-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(DivisionByZero) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 46,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9310,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 46,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9310,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "213fe96bc2597e6fcd556939bf200b9ea63105ada20db3b79bea727911063aef",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: division-by-zero-mod-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(DivisionByZero) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 46,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9310,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 46,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9310,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "1df2187daf915aace5e55cee6a05b25fda4e286e382740eab3eec470fe4b06e4",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: division-by-zero-mod-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(DivisionByZero) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 46,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9310,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 46,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9310,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "1b1fd3e2e2f438514e8caa81dec2496d0e73c4f22435b95a397313229dd43f48",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: division-by-zero-mod-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(DivisionByZero) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 46,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9310,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 46,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9310,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "926d6dd032dcba73bfe59649acad5d2efa89c3f95ea4928d50321ee831504275",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: division-by-zero-mod-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(DivisionByZero) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 46,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9310,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 46,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9310,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7784dbe6c7d58baf7f3e08be52ac844ace063cf9af9fb871108e91ec46bb2e04",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: division-by-zero-mod-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(DivisionByZero) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 46,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9310,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 46,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9310,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "6c523191989fc70653ca49e93588afa2c8f4151dd96bb0222029acfdcb0c879e",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: division-by-zero-mod-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(DivisionByZero) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 46,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9310,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 46,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9310,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "85d5fa77b126459939489e84872d8c52cf08bf39d6bae36884af6ecd6c14fc68",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: division-by-zero-mod-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(DivisionByZero) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 46,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9310,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 46,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9310,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "9cff5b436fac28d5209df0612fc543792bdf9e0a23e6063a46a9013c75637108",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: division-by-zero-mod-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(DivisionByZero) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 46,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9310,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 46,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9310,
    ),
  )),
]
