stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_tests__stack_depth_too_deep_call_chain_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_tests.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "65d83806a26f9a5a98b98db71f2a48e2070c1e3aa98b59e47ca3153b88aab619",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: max-stack-depth-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(MaxStackDepthReached) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 8232,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 402625,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 8232,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 402625,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "77215c02ad3750aac7c210f7bf48732e4b03c7cfedc333a6769205c4a7c86d78",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: max-stack-depth-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(MaxStackDepthReached) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 8232,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 402497,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 8232,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 402497,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a2d6672180697b57a82e007ac8b77403b0e930cb336273ce905ffc1cd1055722",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: max-stack-depth-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(MaxStackDepthReached) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 8232,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 402497,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 8232,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 402497,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "fbd9a6162add01901973395bd89efe5fefd338f6c603b9a32772c8081c5bf7f9",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: max-stack-depth-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(MaxStackDepthReached) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 8232,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 402497,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 8232,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 402497,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "1aa6db47c1ee8ef34b164a0ef19d3703b98df8a27bb5fd36137c107f03b7dd0a",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: max-stack-depth-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(MaxStackDepthReached) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 8232,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 402497,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 8232,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 402497,
    ),
  )),
]
