stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_tests__sub_arg_len_underflow_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "1b401f5d0b538138f9c53bf24a6f084be64c012e0eddb7654c9d75b52acb1d60",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: arg-len-underflow-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(ArithmeticUnderflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9026,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9026,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7b17985eafd8deca2adf6cca2ceaae31fcacbd57c33976ce2ce212c049b7e419",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: arg-len-underflow-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(ArithmeticUnderflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9026,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9026,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "997a6d27ffafcd636a080883e3ee07827514c1e7270b5016154fa8c8d92edaec",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: arg-len-underflow-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(ArithmeticUnderflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9026,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9026,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "5778f16f15c269f0992e55bbad61c426a721135aba8c98b9db10e91fd6e2429f",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: arg-len-underflow-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(ArithmeticUnderflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9026,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9026,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7caa062afebeea1fbe7dd0d71d14568b7e5e47a19fd13a87301e9aefa76a88d1",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: arg-len-underflow-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(ArithmeticUnderflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9026,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9026,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "2634f8c979578b26a74cddd4c2b4f79e0593ce520c18076f0eb6dce59d5e6eb7",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: arg-len-underflow-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(ArithmeticUnderflow) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9026,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9026,
    ),
  )),
]
